Implemented roles being part of the auth token